uploads: fix layout on tablets.
Fix it so that we use the vertical layout (edit panel beneath the image) when the screen is tall,
and the horizontal layout (edit panel beside the image) when the screen is wide.

This fixes it so that tablets in portrait mode don't use the horizontal layout, which doesn't have
much space even though the screen is wider than 660px. This also means that you can rotate your
phone or tablet to switch between layouts.

The vertical layout is also used on vertical monitors, which might be less desirable.

We use `max-aspect-ratio` instead of `orientation: portrait` to work around an issue with the
layout switching when you try to edit the tags. On Android, in Firefox and Chrome <108, opening the
on-screen keyboard will resize the viewport, which can potentially cause the orientation to change
from portrait to landscape if the height shrinks enough. Using an aspect ratio of 4:3 (roughly)
instead of 1:1 gives us extra headroom to hopefully prevent this from happening.

--- a/app/javascript/src/styles/specific/uploads.scss
+++ b/app/javascript/src/styles/specific/uploads.scss
@@ -14,11 +14,18 @@ div#c-uploads {
       position: sticky;
     }
 
-    @media (max-width: 660px) {
+    // XXX Use the vertical layout on tall-ish screens. We use aspect ratio <4:3 instead of <1:1 to avoid the layout
+    // switching when the on-screen keyboard is opened in Firefox on Android. We write it this way because we want
+    // <1.3333, not <=1.3333.
+    @media (max-aspect-ratio: 10000/7501) {
       .upload-container {
         grid-template-columns: 1fr;
         grid-template-rows: min-content;
         gap: 0.25rem;
+      }
+
+      .upload-divider {
+        display: none;
       }
     }
 
